--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.2",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mariadb": "^3.2.0",
     "npm": "^9.8.0",
     "path": "^0.12.7",
@@ -19,11 +22,5 @@
     "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec ts-node index.js"
-  },
-  "name": "todolist",
-  "description": "에이블 스토어 todoList",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "",
-  "license": "ISC"
+  }
 }
